page accueil affiché

--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
         <div class="photographer_section"></div>
     </main>
 
-    <script src="scripts/models/Photographer.js"></script>
-    <script src="scripts/factories/PhotographerFactory.js"></script>
-    <script src="scripts/pages/index.js"></script>
+    <script type="module" src="scripts/controller/index_action.js"></script>
   </body>
 </html>
