--- a/photographer.html
+++ b/photographer.html
@@ -30,8 +30,7 @@
       </div>
       <div class="photograph-media"></div>
     </main>
-    <script src="/scripts/pages/photographer.js"></script>
-    <script src="/scripts/factories/photographerProfil.js"></script>
-    <script src="/scripts/utils/contactForm.js"></script>
+
+    <script type="module" src="scripts/controller/profil_action.js"></script>
   </body>
 </html>
