--- a/photographer.html
+++ b/photographer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href="css/photographer.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
@@ -32,5 +32,6 @@
     </main>
 
     <script type="module" src="scripts/controller/profil_action.js"></script>
+    <script src="scripts/utils/contactForm.js"></script>
   </body>
 </html>
