--- a/photographer.html
+++ b/photographer.html
@@ -8,26 +8,12 @@
     <title>Fisheye - photographe </title>
   </head>
   <body>
+    <div id="contact_modal"></div>
     <header>
       <a href="index.html"><img src="assets/images/logo.png" class="logo" alt="Fisheye Home page"/></a>
     </header>
     <main id="main">
       <div class="photograph-header"></div>
-      <div id="contact_modal">
-        <div class="modal">
-          <header>
-            <h2>Contactez-moi</h2>
-            <img src="assets/icons/close.svg" onclick="closeModal()" />
-          </header>
-          <form>
-            <div>
-              <label>Prénom</label>
-              <input />
-            </div>
-            <button class="contact_button">Envoyer</button>
-          </form>
-        </div>
-      </div>
       <div class="photograph-media"></div>
     </main>
 
