--- a/photographer.html
+++ b/photographer.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <title>Fisheye - photographe </title>
   </head>
   <body>
@@ -15,6 +16,7 @@
     <main id="main">
       <div class="photograph-header"></div>
       <div class="photograph-media"></div>
+      <div class="price"></div>
     </main>
 
     <script type="module" src="scripts/controller/profil_action.js"></script>
