add filter (don t work yet)

--- a/photographer.html
+++ b/photographer.html
@@ -15,6 +15,7 @@
     </header>
     <main id="main">
       <div class="photograph-header"></div>
+      <div class="filterMedia"></div>
       <div class="photograph-media"></div>
       <div class="price"></div>
     </main>
