--- a/photographer.html
+++ b/photographer.html
@@ -14,6 +14,7 @@
       <a href="index.html"><img src="assets/images/logo.png" class="logo" alt="Fisheye Home page"/></a>
     </header>
     <main id="main">
+      <div class="modalLightbox"></div>
       <div class="photograph-header"></div>
       <div class="filterMedia"></div>
       <div class="photograph-media"></div>
@@ -21,6 +22,7 @@
     </main>
 
     <script type="module" src="scripts/controller/profil_action.js"></script>
+    <script src="scripts/utils/lightbox.js"></script>
     <script src="scripts/utils/modalContactForm.js"></script>
     <script src="scripts/utils/inputContactForm.js"></script>
   </body>
