--- a/photographer.html
+++ b/photographer.html
@@ -22,6 +22,7 @@
     </main>
 
     <script type="module" src="scripts/controller/profil_action.js"></script>
+    <script src="scripts/utils/filter.js"></script>
     <script src="scripts/utils/lightbox.js"></script>
     <script src="scripts/utils/modalContactForm.js"></script>
     <script src="scripts/utils/inputContactForm.js"></script>
