--- a/photographer.html
+++ b/photographer.html
@@ -14,11 +14,7 @@
       <a href="index.html"><img src="assets/images/logo.png" class="logo" alt="Fisheye Home page"/></a>
     </header>
     <main id="main">
-      <div class="modalLightbox">
-          <span class="previousSlide">&#60;</span>
-          <img class="closeModal" src="assets/icons/close.svg" onclick="closeLightbox()">
-          <span class="nextSlide">&#62;</span>
-      </div>
+      <div class="modalLightbox"></div>
       <div class="photograph-header"></div>
       <div class="filterMedia"></div>
       <div class="photograph-media"></div>
