--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <header>
-      <a href="index.html">
+      <a role="link" class="linkHome" href="index.html">
         <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page" aria-label="Accueil"/>
       </a>
 
-      <h1>Nos photographes</h1>
+      <h1 role="header">Nos photographes</h1>
     </header>
 
     <main id="main">
