--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <a role="link" class="linkHome" href="index.html">
+      <a class="homePage" role="link" class="linkHome" href="index.html">
         <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page" aria-label="Accueil"/>
       </a>
 
