--- a/photographer.html
+++ b/photographer.html
@@ -12,7 +12,7 @@
     <div id="contact_modal"></div>
 
     <header role="link">
-      <a href="index.html"><img src="assets/images/logo.png" class="logo" alt="Fisheye Home page"/></a>
+      <a class="homePage" href="index.html"><img src="assets/images/logo.png" class="logo" alt="Fisheye Home page"/></a>
     </header>
 
     <main id="main">
