--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   </head>
   <body>
     <header>
-      <a class="homePage" role="link" class="linkHome" href="index.html">
+      <a class="homePage" role="link" class="linkHome" href="index.html" aria-label="Accueil">
         <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page" aria-label="Accueil"/>
       </a>
 
-      <h1 role="header">Nos photographes</h1>
+      <h1 role="header" tabindex="0">Nos photographes</h1>
     </header>
 
-    <main id="main">
+    <main id="main" aria-label="Section photographes">
         <div class="photographer_section"></div>
     </main>
 
