--- a/photographer.html
+++ b/photographer.html
@@ -11,8 +11,8 @@
   <body>
     <div id="contact_modal"></div>
 
-    <header role="link">
-      <a class="homePage" href="index.html"><img src="assets/images/logo.png" class="logo" alt="Fisheye Home page"/></a>
+    <header role="link" aria-label="Accueil">
+      <a tabindex="1" class="homePage" href="index.html"><img src="assets/images/logo.png" class="logo" alt="Logo Fisheye accueil"/></a>
     </header>
 
     <main id="main">
