--- a/photographer.html
+++ b/photographer.html
@@ -11,7 +11,7 @@
   <body>
     <div id="contact_modal"></div>
 
-    <header role="link" aria-label="Accueil">
+    <header class="header" role="link" aria-label="Accueil">
       <a tabindex="1" class="homePage" href="index.html"><img src="assets/images/logo.png" class="logo" alt="Logo Fisheye accueil"/></a>
     </header>
 
