--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fisheye</title>
+    <link rel="icon" type="image/png" href="assets/favicon.png">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
-      <a class="homePage" role="link" class="linkHome" href="index.html" aria-label="Accueil">
-        <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page" aria-label="Accueil"/>
+      <a href="index.html" class="homePage linkHome" aria-label="Accueil">
+        <img src="assets/images/logo.png" class="logo" alt="Fisheye Home page" aria-label="Accueil">
       </a>
-
-      <h1 role="header" tabindex="0">Nos photographes</h1>
+      <h1 tabindex="0">Nos photographes</h1>
     </header>
 
     <main id="main" aria-label="Section photographes">
-        <div class="photographer_section"></div>
+      <div class="photographer_section"></div>
     </main>
 
     <script type="module" src="scripts/controller/index_action.js"></script>
